testsuite/tests/splice-imports/SI28.stderr
SI28.hs:8:13: error: [GHC-28914]
    • Level error:
      ‘id’ is used at level 0 but it is bound at level 1
        • imported at level 1 from ‘Prelude’ at SI28.hs:6:1-20
    • In the Template Haskell quotation: [| id |]
      In the untyped splice: $([| id |])

